--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,3 +22,13 @@ footer {
 .logo {
   height: 10rem;
 }
+
+.login-form {
+  max-width: 400px;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px
+}
