add notification feature for messages and posts

--- a/frontend/src/modules/student/styles/SidePanel.css
+++ b/frontend/src/modules/student/styles/SidePanel.css
@@ -104,3 +104,10 @@
     font-size: 1.4rem;
   }
 }
+
+.notification-badge {
+  margin-left: 5px;
+  font-size: 0.7rem;
+  position: relative;
+  top: -1px;
+}
