--- a/frontend/src/modules/counselor/styles/SidePanel.css
+++ b/frontend/src/modules/counselor/styles/SidePanel.css
@@ -67,3 +67,10 @@
   padding: 20px;
   min-height: calc(100vh - 100px);
 }
+
+.notification-badge {
+  margin-left: 5px;
+  font-size: 0.7rem;
+  position: relative;
+  top: -1px;
+}
